# pesec

./: CMakeLists.txt  CMakePresets.json  README.md  build-debug.bat  build-release.bat
examples/: arrays.pesec  for.pesec  functions.pesec  ifelse.pesec  test.pesec  variables.pesec  vars.pesec  while.pesec
include/frontend/: Context.hpp  FunctionValue.hpp  Lexer.hpp  LibraryLoader.hpp  Parser.hpp  PesecStd.hpp  Token.hpp  Value.hpp
include/frontend/ast/: ASTNode.hpp  ArrayAccessAssignmentNode.hpp  ArrayAccessNode.hpp  ArrayNode.hpp  ArrayRangeNode.hpp  BinaryOpNode.hpp  BlockNode.hpp  BreakNode.hpp  BreakValueException.hpp  ForNode.hpp  FunctionCallNode.hpp  FunctionInstantCallNode.hpp  FunctionNode.hpp  IfNode.hpp  IntegerNode.hpp  LiteralNode.hpp  ReturnNode.hpp  ReturnValueException.hpp  StringNode.hpp  UseNode.hpp  Value.hpp  ValueNode.hpp  VariableAssignmentNode.hpp  VariableCompoundAssignmentNode.hpp  VariableDefinitionNode.hpp  VariableNode.hpp  WhileNode.hpp
src/: main.cpp
src/frontend/: Context.cpp  FunctionValue.cpp  Lexer.cpp  LibraryLoader.cpp  Parser.cpp  PesecStd.cpp  Token.cpp  Value.cpp
src/frontend/ast/: ASTNode.cpp  ArrayAccessAssignmentNode.cpp  ArrayAccessNode.cpp  ArrayNode.cpp  ArrayRangeNode.cpp  BinaryOpNode.cpp  BlockNode.cpp  BreakNode.cpp  BreakValueException.cpp  ForNode.cpp  FunctionCallNode.cpp  FunctionInstantCallNode.cpp  FunctionNode.cpp  IfNode.cpp  IntegerNode.cpp  LiteralNode.cpp  ReturnNode.cpp  ReturnValueException.cpp  StringNode.cpp  UseNode.cpp  Value.cpp  ValueNode.cpp  VariableAssignmentNode.cpp  VariableCompoundAssignmentNode.cpp  VariableDefinitionNode.cpp  VariableNode.cpp  WhileNode.cpp
stdlib/io/: CMakeLists.txt  lib.cpp
stdlib/math/: CMakeLists.txt  lib.cpp
stdlib/types/: CMakeLists.txt  lib.cpp  lib.hpp
